--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="webmarkup.css">
     <title>Document</title>
 </head>
 <body>
     <H1>Welcome </H1>
-    This is some simple tag
+  <div class="sup"> This is some simple tag </div>
     <a href="https://inholland.nl"> Inholland </a>
+    
 </body>
 </html>
