--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="webmarkup.css">
+    
     <title>Document</title>
 </head>
 <body>
-    <H1>Welcome </H1>
-  <div class="sup"> This is some simple tag </div>
-    <a href="https://inholland.nl"> Inholland </a>
+    <H1>This is the Home page</H1>
+    <br>
+   <div class="pe"> <p> This is some basic text for de web page that you are going through</p> </div>
+   <img src="img1.jpg">
     
 </body>
 </html>
