--- a/index.html
+++ b/index.html
@@ -3,21 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="webmarkup.css">
-    
-    <title>Document</title>
+    <title>Attractions of Rotterdam</title>
+    <link rel="icon" type="logo.png" href="path-to-your-favicon"/>
+    <link rel="stylesheet" href="mycss.css">
 </head>
 <body>
-    <H1>This is the Home page</H1>
-    <br>
-   <div class="pe"> <p> This is some basic text for de web page that you are going through</p> </div>
-   <img src="img1.jpg">
-    
+    <nav>
+        <a href="index.html"><img src="logo.png"></a>
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="events.htlm">Events</a></li>
+            <li><a href="visitorsinfo.html">Visitors Info</a></li>
+            <li><a href="conctact.html">Contact</a></li>
+          </ul>
+    </nav>
+    <header>
+        <img src="images/img1.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+    </header>
+    <section >
+            <h1>Discover the Unforgettable Charms of a Modern Masterpiece</h1>
+              <p> 
+                Rotterdam is a young, dynamic city known for its modern architecture and impressive harbour. Although only a
+                fraction smaller than Amsterdam, it has a completely different look and feel than the capital. The city is
+                characterised by an imposing skyline of skyscrapers and modern design, but also by icons such as the Erasmus
+                Bridge, Rotterdam Central Station and of course the Euromast observation tower, which offers breathtaking
+                views of the city and surrounding areas.</p>
+    </section>
+        <img src="images/backgroud.jpg" alt="picture of a lanscape in rotterdam">
+        <aside>
+            <h1>Top 3 Places to visit</h1>
+        </aside>
+        <arcticle id="marktal">
+            <h1>Markthal</h1>
+            <img src="images/photo1.jpg">
+            <p>The Markthal (English: Market Hall) is a residential and office building with a market hall, located in Rotterdam. The building was opened on October 1, 2014, by Queen Máxima of the Netherlands. Besides the large market hall, the complex houses 228 apartments, 4600 m2 retail space, 1600 m2 horeca and an underground 4-storey parking garage with a capacity of 1200+ cars.</p>
+        </arcticle>
+        <arcticle id="main2">
+            <section id="zoo2">
+            <h1>Rotterdam Zoo</h1>
+            <img src="images/photo web desing2.jpg" alt="acvarium of the rotterdam zoo"/>
+                 <p>It is one of the oldest zoos in the Netherlands, and has been operated by the Stichting Koninklijke
+                  Rotterdamse Diergaarde Divided into several zoogeographic regions, the 26-hectare boasts 562 species. It
+                  also the zoo is a member of the Dutch Zoo Federation and the European Association of Zoos and Aquaria. In
+                  2007, it celebrated its 150th anniversary.
+              </p>
+              </section>
+            </arcticle>
+
+            <arcticle>
+                <section id="main3">
+                    <h1>"Remastered" Audiovisual Experience</h1>
+                    <img src="images/photo web desin4.jpg" alt="photo of a museum in rotterdam">
+                    <p> The old Dutch Masters reimagined by the new Dutch Masters. The very best Dutch digital artists have created a new world. A world where you go on parade with the unearthly creatures of Jeroen Bosch, get immersed in the colourful scenes of  Van Gogh and dance on the beat of Mondrian’s ‘Victory Boogie Woogie’.
+                        This unique 60-minute experience also includes walking through a waterfall, making your own UFO fly on a gigantic LED Screen, interacting with schools of fish and sailing through the clouds.</p>
+                </section>
+            </arcticle>
+            <footer>
+                <section id="icons">
+                <a href="index.html">Homepage</a>
+                <a href="contact.html">Contact</a>
+                <a href="https://instagram.com"><img src="images/ing2.png"></a>
+                <img href="https://facebook.com/src=" src="images/ing1.png">
+                <img src="images/ing3.png">
+                </section>
+                <section id="image">
+                <img src="images/webdesing5.jpg">
+                </section>
+            </footer>
 </body>
 </html>
