--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
     <link rel="icon" type="logo.png" href="path-to-your-favicon"/>
-    <link rel="stylesheet" href="mycss.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="logo.png"></a>
+        <a href="index.html"><img src="images/logo.png"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.htlm">Events</a></li>
-            <li><a href="visitorsinfo.html">Visitors Info</a></li>
+            <li><a href="conectpage.html">Visitors Info</a></li>
             <li><a href="conctact.html">Contact</a></li>
           </ul>
     </nav>
     <header>
         <img src="images/img1.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <figcaption>Fig.1 - Picture of Erasmus bridge Rotterdam..</figcaption>
     </header>
     <section >
             <h1>Discover the Unforgettable Charms of a Modern Masterpiece</h1>
@@ -68,6 +69,7 @@
                 </section>
                 <section id="image">
                 <img src="images/webdesing5.jpg">
+                <p> &copy; Chiosa Web-MarkUp</p>
                 </section>
             </footer>
 </body>
