--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     </nav>
     <header>
         <img src="images/img1.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
-        <figcaption>Fig.1 - Picture of Erasmus bridge Rotterdam..</figcaption>
     </header>
-    <section >
+    <section id="welcome" >
             <h1>Discover the Unforgettable Charms of a Modern Masterpiece</h1>
               <p> 
                 Rotterdam is a young, dynamic city known for its modern architecture and impressive harbour. Although only a
@@ -30,7 +29,9 @@
                 Bridge, Rotterdam Central Station and of course the Euromast observation tower, which offers breathtaking
                 views of the city and surrounding areas.</p>
     </section>
+    <section id="backg">
         <img src="images/backgroud.jpg" alt="picture of a lanscape in rotterdam">
+        </section>
         <aside>
             <h1>Top 3 Places to visit</h1>
         </aside>
@@ -41,7 +42,7 @@
         </arcticle>
         <arcticle id="main2">
             <section id="zoo2">
-            <h1>Rotterdam Zoo</h1>
+          <h1>Rotterdam Zoo</h1>
             <img src="images/photo web desing2.jpg" alt="acvarium of the rotterdam zoo"/>
                  <p>It is one of the oldest zoos in the Netherlands, and has been operated by the Stichting Koninklijke
                   Rotterdamse Diergaarde Divided into several zoogeographic regions, the 26-hectare boasts 562 species. It
