--- a/conectpage.html
+++ b/conectpage.html
@@ -23,28 +23,16 @@
         <h1>Visitors Info</h1>
     </aside>
         <containter id="icos">
-        <a href ="food.html">Click here for food information</a> <img src="images/2771401.png"> 
+        <a href ="food.html">Click here for food information</a>
+         <img src="images/2771401.png"> 
         </containter>
         <containter id="tourism">
         <a href = "tourism.html" >Click here for Tourism information</a>
-       <!-- <img src="images/travel.png"> -->
+        <img src="images/travel.png"> 
         </containter>
         <container id="art">
         <a href= "art.html">Click here for Art&Culture information</a>
-       <!-- <img src="images/1756784.png"> -->
+       <img src="images/1756784.png"> 
     </containter>
-    <footer>
-        <section id="icons">
-        <a href="index.html">Homepage</a>
-        <a href="contact.html">Contact</a>
-        <a href="https://instagram.com"><img src="images/ing2.png"></a>
-        <img href="https://facebook.com/src=" src="images/ing1.png">
-        <img src="images/ing3.png">
-        </section>
-        <section id="image">
-        <img src="images/webdesing5.jpg">
-        <p> &copy; Chiosa Web-MarkUp</p>
-        </section>
-    </footer>
 </body>
 </html>
