--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
-    <link rel="icon" type="logo.png" href="path-to-your-favicon"/>
+    <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
