--- a/conectpage.html
+++ b/conectpage.html
@@ -10,7 +10,7 @@
         <a href="index.html"><img src="images/logo.png"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="events.htlm">Events</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="visitorsinfo.html">Visitors Info</a></li>
             <li><a href="conctact.html">Contact</a></li>
           </ul>
