--- a/food.html
+++ b/food.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img src="images/logo.png"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="events.htlm">Events</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="conectpage.html">Visitors Info</a></li>
             <li><a href="conctact.html">Contact</a></li>
           </ul>
