--- a/art.html
+++ b/art.html
@@ -54,5 +54,8 @@
         <p> &copy; Chiosa Web-MarkUp</p>
         </section>
     </footer>
+    <header>
+        <img src="images/contact.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+    </header>
 </body>
 </html>
