--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
         </table>
         <section id= "submit"><input type="submit" value="Submit"> </section>
     </form>
+    <figure>
         <section id="person">
             <img src="images/person.jpeg">
             <h1>Lucifer Thomas
@@ -57,6 +58,7 @@
                 <h1>Email:luciferthomas@rotterdam.nl</h1>
             </h1>
         </section>
+    </figure>
       <footer>
         <section id="icons">
         <a href="index.html">Homepage</a>
