--- a/art.html
+++ b/art.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="conectpage.html">Visitors Info</a></li>
-            <li><a href="conctact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
     </nav>
     <header>
@@ -54,8 +54,5 @@
         <p> &copy; Chiosa Web-MarkUp</p>
         </section>
     </footer>
-    <header>
-        <img src="images/contact.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
-    </header>
 </body>
 </html>
