--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="conectpage.html">Visitors Info</a></li>
-            <li><a href="conctact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
     </nav>
     <header>
