--- a/art.html
+++ b/art.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
-    <link rel="stylesheet" href="css/art.css">
+    <link rel="stylesheet" type="text/css" href="css/art.css">
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="images/logo.png"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Erasmusburg" title="Logo of the website"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
@@ -18,26 +18,26 @@
           </ul>
     </nav>
     <header>
-        <img src="images/backgod.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <img src="images/backgod.jpg" alt="Museum in Rotterdam" title="Background of the Page">
     </header>
     <aside>
         <h1>Top 3 Museums to visit</h1>
     </aside>
     <section id="art1">
         <h1>Museum Rotterdam</h1>
-        <img src="images/locatie-coolhaven-375.jpg">
+        <img src="images/locatie-coolhaven-375.jpg" alt="Rotterdam Museum" title="Rottedam Museum, The Netherlands">
         <p>Museum Rotterdam puts you in the middle of Rotterdam in May 1940 with personal stories, compelling images and overwhelming sound. How does it feel when your life is turned upside down in one fell swoop and your familiar environment is in pieces? The museum is mentioned in Lonely Planet's Pocket Rotterdam as one of the top sights.</p>
         <a href="https://tickets.hetnieuweinstituut.nl/hni/nl/flow_configs/het-nieuwe-instituut-3ts/steps/select-your-tickets/z_event/5465">Get tickets here</a>
     </section>
     <section id="art2">
         <h1>Chabot Museum</h1>
-        <img src="images/unnamed.jpg">
+        <img src="images/unnamed.jpg" alt="ChatBot Museum" title="Chabot Museum, The Netherlands">
         <p>The Chabot Museum is a small museum with a varied international exhibition program. The Chabot Museum manages one of the most important collections of painter and sculptor Henk Chabot (1894-1949), a Dutch expressionist. As a painter of farmers and gardeners, of the Dutch landscape and of refugees and people in hiding during the war years, Chabot has his own place within Dutch modern art</p>
         <a href="https://tickets.chabotmuseum.nl/chabotmuseum/nl/flow_configs/chabot-ts/steps/select-your-tickets/z_event/4645">Get tickets here</a>
     </section>
     <section id="art3">
         <h1>Museum Boijmans Van Beuningen</h1>
-        <img src="images/art3.png">
+        <img src="images/art3.png " alt="Museum Boijmans Van Beuningen" alt="Museum Boijmans Van Beuningen, The Netherlands">
         <p>Rotterdam's newest icon. And the first depot in the world that offers access to the complete collection. Stroll – independently or with a guide – among 151,000 art objects. You can even watch conservation and restoration. How special is that! On the roof terrace you can enjoy a snack and drink and a great view. The 40-meter-high mirrored building was designed by Rotterdam architect Winy Maas of MVRDV.</p>
        <p> <a href="https://www.boijmans.nl/tickets">Get tickets here</a></p>
     </section>
@@ -45,14 +45,15 @@
         <section id="icons">
         <a href="index.html">Homepage</a>
         <a href="contact.html">Contact</a>
-        <a href="https://instagram.com"><img src="images/ing2.png"></a>
-        <img href="https://facebook.com/src=" src="images/ing1.png">
-        <img src="images/ing3.png">
+        <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+        <a href="https://facebook.com/src"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+        <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
         </section>
         <section id="image">
-        <img src="images/webdesing5.jpg">
+        <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
         <p> &copy; Chiosa Web-MarkUp</p>
         </section>
+    </footer>
     </footer>
 </body>
 </html>
