--- a/conectpage.html
+++ b/conectpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <title>Visitors Info</title>
-    <link rel="stylesheet" href="css/connection.css">
+    <link rel="stylesheet" type="text/css" href="css/connection.css">
     <nav>
         <a href="index.html"><img src="images/logo.png"></a>
         <ul class="nav">
