--- a/food.html
+++ b/food.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/food.css">
+    <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <title>Food</title>
 </head>
@@ -26,6 +26,7 @@
     <arcticle id="food1">
         <h1>Vader Kleinjan Café</h1>
         <img src="images/foo1.png">
+        <figcaption>Vader Kleinjan Cafe</figcaption>
         <p>
             Details:
         </p>
@@ -44,6 +45,7 @@
     </arcticle>
     <arcticle id="food2">
         <h1>Atithi Indian Restaurant Rotterdam</h1>
+        <figcaption>Atihi Indian Restaurant Rotterdam</figcaption>
         <img src="images/food2.png">
         <p>Details:</p>
             <p>
@@ -59,6 +61,7 @@
     </arcticle>
     <article id="food3">
         <h1>Restaurant Parkheuvel</h1>
+        <figcaption>Restaurant Parkheuvel</figcaption>
         <img src="images/food3.png">
        <p> Details:</p>
 <p>Address: Heuvellaan 21, 3016 GL Rotterdam</p>
