--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
-    <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" type="text/css" href="css/events.css">
 </head>
 <body>
     <nav>
