--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="images/logo.png"></a>
+        <a href="index.html"><img src="images/logo.png" alt="image with the erasmus bridge" title=" Logo of the Website"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
@@ -18,7 +18,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/img1.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <img src="images/img1.jpg" alt="Picture of a Rotterdam Erasmus Bridge" title="Rotterdam, Erasmusburg.">
     </header>
     <section id="welcome" >
             <h1>Discover the Unforgettable Charms of a Modern Masterpiece</h1>
@@ -30,32 +30,32 @@
                 views of the city and surrounding areas.</p>
     </section>
     <section id="backg">
-        <img src="images/backgroud.jpg" alt="picture of a lanscape in rotterdam">
+        <img src="images/backgroud.jpg" alt="Landscape of Old Town Rotterdam" title="Rotterdam, Old Town">
         </section>
         <aside>
             <h1>Top 3 Places to visit</h1>
         </aside>
         <arcticle id="marktal">
             <h1>Markthal</h1>
-            <img src="images/photo1.jpg">
+            <img src="images/photo1.jpg" alt="Front Photo of Markthal in Rotterdam" title="Markthal, Rotterdam Central">
             <p>The Markthal (English: Market Hall) is a residential and office building with a market hall, located in Rotterdam. The building was opened on October 1, 2014, by Queen Máxima of the Netherlands. Besides the large market hall, the complex houses 228 apartments, 4600 m2 retail space, 1600 m2 horeca and an underground 4-storey parking garage with a capacity of 1200+ cars.</p>
         </arcticle>
         <arcticle id="main2">
             <section id="zoo2">
           <h1>Rotterdam Zoo</h1>
-            <img src="images/photo web desing2.jpg" alt="acvarium of the rotterdam zoo"/>
+            <img src="images/photo web desing2.jpg" alt="acvarium of the rotterdam zoo" title=" Rotterdam zoo, Rotterdam Netherlands"/>
                  <p>It is one of the oldest zoos in the Netherlands, and has been operated by the Stichting Koninklijke
                   Rotterdamse Diergaarde Divided into several zoogeographic regions, the 26-hectare boasts 562 species. It
                   also the zoo is a member of the Dutch Zoo Federation and the European Association of Zoos and Aquaria. In
                   2007, it celebrated its 150th anniversary.
-              </p>
+              </p> 
               </section>
             </arcticle>
 
             <arcticle>
                 <section id="main3">
                     <h1>"Remastered" Audiovisual Experience</h1>
-                    <img src="images/photo web desin4.jpg" alt="photo of a museum in rotterdam">
+                    <img src="images/photo web desin4.jpg" alt="photo of a museum in rotterdam" title="Museum in Rotterdam Netherlands">
                     <p> The old Dutch Masters reimagined by the new Dutch Masters. The very best Dutch digital artists have created a new world. A world where you go on parade with the unearthly creatures of Jeroen Bosch, get immersed in the colourful scenes of  Van Gogh and dance on the beat of Mondrian’s ‘Victory Boogie Woogie’.
                         This unique 60-minute experience also includes walking through a waterfall, making your own UFO fly on a gigantic LED Screen, interacting with schools of fish and sailing through the clouds.</p>
                 </section>
@@ -64,12 +64,12 @@
                 <section id="icons">
                 <a href="index.html">Homepage</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://instagram.com"><img src="images/ing2.png"></a>
-                <img href="https://facebook.com/src=" src="images/ing1.png">
-                <img src="images/ing3.png">
+                <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+                <a href="https://facebook.com"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+                <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
                 </section>
                 <section id="image">
-                <img src="images/webdesing5.jpg">
+                <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
                 <p> &copy; Chiosa Web-MarkUp</p>
                 </section>
             </footer>
