--- a/conectpage.html
+++ b/conectpage.html
@@ -7,7 +7,7 @@
     <title>Visitors Info</title>
     <link rel="stylesheet" type="text/css" href="css/connection.css">
     <nav>
-        <a href="index.html"><img src="images/logo.png"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Logo of the website" title="Erasmusburg, The Netherlands"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
@@ -16,7 +16,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/background2.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <img src="images/background2.jpg" alt="Picture of a Rotterdam Erasmus Bridge" title="Erasmus bridge, The Netherlands">
     </header>
 </head>
 <body>
@@ -25,15 +25,15 @@
     </aside>
         <containter id="icos">
         <a href ="food.html">Click here for food information</a>
-         <img src="images/2771401.png"> 
+         <img src="images/2771401.png" alt="icon of the food page" title="Press here to go to food page"> 
         </containter>
         <containter id="tourism">
         <a href = "tourism.html" >Click here for Tourism information</a>
-        <img src="images/travel.png"> 
+        <img src="images/travel.png" alt="icoc of the travel page" title="Press here to go to travel page "> 
         </containter>
         <container id="art">
         <a href= "art.html">Click here for Art&Culture information</a>
-       <img src="images/1756784.png"> 
+       <img src="images/1756784.png" alt="icon of the art page" title="Press here to go to art page"> 
     </containter>
 </body>
 </html>
