--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/contact.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <img src="images/contact.jpg" alt="Picture of a Rotterdam Erasmus Bridge" tile="Erasmusburg, The Netherlands">
     </header>
     <aside>
     <h1>Contact Us</h1>
@@ -51,7 +51,7 @@
     </form>
     <figure>
         <section id="person">
-            <img src="images/person.jpeg">
+            <img src="images/person.jpeg" alt="Picture of an employe" title="Attractions of Rotterdam Contact Person">
             <h1>Lucifer Thomas
                <h1> International Press Officer</h1>
                <h1> Phone: +317828464313</h1>
@@ -59,19 +59,19 @@
             </h1>
         </section>
     </figure>
-      <footer>
+    <footer>
         <section id="icons">
         <a href="index.html">Homepage</a>
         <a href="contact.html">Contact</a>
-        <a href="https://instagram.com"><img src="images/ing2.png"></a>
-        <img href="https://facebook.com/src=" src="images/ing1.png">
-        <img src="images/ing3.png">
+        <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+        <a href="https://facebook.com/src"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+        <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
         </section>
         <section id="image">
-        <img src="images/webdesing5.jpg">
+        <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
         <p> &copy; Chiosa Web-MarkUp</p>
         </section>
-    </footer> 
+    </footer>
 
     </body>
 </html>
