--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="images/logo.png"></a>
+        <a href="index.html"><img src="images/logo.png" alt="logo of the website" title="Erasmusburg, The Netherlands"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
@@ -18,7 +18,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/events.jpg" alt="Picture of a Rotterdam Erasmus Bridge">
+        <img src="images/events.jpg" alt="Stage of an festival" title="Rottedam, The Netherlands">
     </header>
     <aside>
         <h1>October calendar 2023</h1>
@@ -26,7 +26,7 @@
     </aside>
     <section id="event1">
         <h2>Architecture Film Festival Rotterdam</h2>
-        <img src="images/events2.jpg">
+        <img src="images/events2.jpg" alt="Poster for a event" title="Rottedam, The Netherlands">
         <h3>October 4, 2023 to October 8, 2023</p></h3>
         <p>
             Just like every year, AFFR has again selected around 100 films in 2023, which are not only about buildings and cities, but about the entire 'designed' world - for example about housing construction and housing shortage, about public space and the people who use it. , and about the way we live together with nature.
@@ -36,7 +36,7 @@
         <h1>November calendar 2023</h1>
     </Section>
 <section id="events3">
-    <img src="images/events3.jpg">
+    <img src="images/events3.jpg" alt="Poster for a music festival" title="Rotterdam, The Netherlands">
     <h1>Heir Festival</h1>
     <h2>November 18, 2023</h2>
     <p>The HIER festival will take place in Rotterdam Ahoy on Saturday, November 18, 2023. The indoor festival is organized by the organizers of Concert at SEA. Throughout the day you will enjoy performances by BLØF, Suzan & Freek, Racoon . In addition to great performances, there is an extensive culinary village with food trucks, special wines and beers on cozy terraces.</p>
@@ -45,14 +45,15 @@
     <section id="icons">
     <a href="index.html">Homepage</a>
     <a href="contact.html">Contact</a>
-    <a href="https://instagram.com"><img src="images/ing2.png"></a>
-    <img href="https://facebook.com/src=" src="images/ing1.png">
-    <img src="images/ing3.png">
+    <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+    <a href="https://facebook.com/src"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+    <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
     </section>
     <section id="image">
-    <img src="images/webdesing5.jpg">
+    <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
     <p> &copy; Chiosa Web-MarkUp</p>
     </section>
+</footer>
 </footer>
 </body>
 </html>
