--- a/food.html
+++ b/food.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="images/logo.png"></a>
+        <a href="index.html"><img src="images/logo.png" alt="Picture of the Erasmusburg" title="Rotterdam, The Netherlands"></a>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
@@ -18,7 +18,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/food.jpeg" alt=photo with food in it">
+        <img src="images/food.jpeg" alt="photo with different type of food" Title="Restaurants in Rotterdam">
     </header>
     <aside>
         <h1>Top 3 Places to eat in</h1>
