--- a/art.html
+++ b/art.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marin">
     <title>Attractions of Rotterdam</title>
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <link rel="stylesheet" type="text/css" href="css/art.css">
@@ -37,7 +38,7 @@
     </section>
     <section id="art3">
         <h1>Museum Boijmans Van Beuningen</h1>
-        <img src="images/art3.png " alt="Museum Boijmans Van Beuningen" alt="Museum Boijmans Van Beuningen, The Netherlands">
+        <img src="images/art3.png " alt="Museum Boijmans Van Beuningen" title="Museum Boijmans Van Beuningen, The Netherlands">
         <p>Rotterdam's newest icon. And the first depot in the world that offers access to the complete collection. Stroll – independently or with a guide – among 151,000 art objects. You can even watch conservation and restoration. How special is that! On the roof terrace you can enjoy a snack and drink and a great view. The 40-meter-high mirrored building was designed by Rotterdam architect Winy Maas of MVRDV.</p>
        <p> <a href="https://www.boijmans.nl/tickets">Get tickets here</a></p>
     </section>
