--- a/food.html
+++ b/food.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/food.css">
+    <meta name="author" content="Marin">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <title>Food</title>
 </head>
@@ -18,7 +19,7 @@
           </ul>
     </nav>
     <header>
-        <img src="images/food.jpeg" alt="photo with different type of food" Title="Restaurants in Rotterdam">
+        <img src="images/food.jpg" alt="photo with different type of food" title="Restaurants in Rotterdam">
     </header>
     <aside>
         <h1>Top 3 Places to eat in</h1>
@@ -46,7 +47,7 @@
     <arcticle id="food2">
         <h1>Atithi Indian Restaurant Rotterdam</h1>
         <figcaption>Atihi Indian Restaurant Rotterdam</figcaption>
-        <img src="images/food2.png">
+        <img src="images/food2.png" alt="Indian restaurant" title="Atihi Indian Restaurant Rotterdam">
         <p>Details:</p>
             <p>
                 Address: Vasteland 5A, 3011 BJ Rotterdam
@@ -62,7 +63,7 @@
     <article id="food3">
         <h1>Restaurant Parkheuvel</h1>
         <figcaption>Restaurant Parkheuvel</figcaption>
-        <img src="images/food3.png">
+        <img src="images/food3.png" alt="Photo of a restaurant" title="Parkheuvel Restaurant Rotterdam">
        <p> Details:</p>
 <p>Address: Heuvellaan 21, 3016 GL Rotterdam</p>
 <p>Website:<a href="https://parkheuvel.nl" target="_blank">parkheuvel</a></p>
@@ -73,14 +74,13 @@
         <section id="icons">
         <a href="index.html">Homepage</a>
         <a href="contact.html">Contact</a>
-        <a href="https://instagram.com"><img src="images/ing2.png"></a>
-        <img href="https://facebook.com/src=" src="images/ing1.png">
-        <img src="images/ing3.png">
+        <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+        <a href="https://facebook.com/src"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+        <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
         </section>
         <section id="image">
-        <img src="images/webdesing5.jpg">
+        <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
         <p> &copy; Chiosa Web-MarkUp</p>
         </section>
-    </footer>
 </body>
 </html>
