--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
+    <meta name="author" content="Marin">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
@@ -51,7 +52,9 @@
               </p> 
               </section>
             </arcticle>
-
+            <div id="cookies-message">
+                <P>9999</P>
+            </div>
             <arcticle>
                 <section id="main3">
                     <h1>"Remastered" Audiovisual Experience</h1>
