--- a/conectpage.html
+++ b/conectpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
+    <meta name="author" content="Marin">
     <title>Visitors Info</title>
     <link rel="stylesheet" type="text/css" href="css/connection.css">
     <nav>
