--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
+    <meta name="author" content="Marin">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <link rel="stylesheet" type="text/css" href="css/events.css">
 </head>
