--- a/tourism.html
+++ b/tourism.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attractions of Rotterdam</title>
+    <meta name="author" content="Marin">
     <link rel="icon" type="image/x-icon" href="images/erasmus.png">
     <link rel="stylesheet" type="text/css" href="css/tourism.css">
 </head>
@@ -25,19 +26,19 @@
     </aside>
     <section id="place1">
         <h1>Euromast</h1>
-       <img src="images/euromasgt.jpg">
+       <img src="images/euromasgt.jpg" alt="Photo of the Euromast tower." title="Euromast Rottedam. The Netherlands">
         <p> The Euromast is an observation tower in the Dutch city of Rotterdam . At 185 meters it is the highest tower in the Netherlands that is open to the public. The shape of the tower is easily recognizable in the Rotterdam skyline.</p>
        <p> <a href="https://euromast.nl/en/buy-tickets">Get tickes</a></p>
     </section>
     <section id="place2">
         <h1>ss Rotterdam</h1>
-        <img src="images/ssrotterdam.jpg">
+        <img src="images/ssrotterdam.jpg" alt="Photo of the SS Rotterdam ship" title="SS Rottedam, The Netherlands">
         <p>The Steamship Rotterdam is the largest ocean liner ever built in the Netherlands. As a former flagship of the Holland-America Line and cruise ship, the ss Rotterdam has sailed many oceans since 1959. The ship is now permanently moored in the Maashaven in Rotterdam, near Katendrecht. The ship's terrace (including children's pool) is accessible via the Promenade Deck or directly from the quay via entrance 2. You can also spend the night on the ss Rotterdam.</p>
         <p><a href="https://ssrotterdam.nl/ontdek/rondleidingen">Get tickes</a></p>
     </section>
 <section id="place3">
     <h1>Cube Houses</h1>
-    <img src="images/cubehouse.jpg">
+    <img src="images/cubehouse.jpg" alt="Photo of the cubic houses" title="Cube House, The Netherlands">
     <p>Piet Blom's Cube House has been a phenomenon since its construction in 1984. It still turns many heads every day: can you live in that?! Arranged as trees the 38 houses consist of 'trunk' and 'crown'. </p>
     <p><a href="https://www.kubuswoning.nl/">Find out more</a></p>
 </section>
@@ -45,15 +46,14 @@
     <section id="icons">
     <a href="index.html">Homepage</a>
     <a href="contact.html">Contact</a>
-    <a href="https://instagram.com"><img src="images/ing2.png"></a>
-    <img href="https://facebook.com/src=" src="images/ing1.png">
-    <img src="images/ing3.png">
+    <a href="https://instagram.com"><img src="images/ing2.png" alt="instagram icon" title="Icon for directing to instagram"></a>
+    <a href="https://facebook.com/src"><img src="images/ing3.png" alt="facebook icon" title="icon for directing to facebook"></a>
+    <img src="images/ing1.png" alt="phone icon" title="icon for directing to phonecall">
     </section>
     <section id="image">
-    <img src="images/webdesing5.jpg">
+    <img src="images/webdesing5.jpg" alt="photo of a landscape of the Erasmus bridge" title="Rotterdam Central, The Netherlands">
     <p> &copy; Chiosa Web-MarkUp</p>
     </section>
-</footer>
 
 
 </body>
